--- a/src/Modal.css
+++ b/src/Modal.css
@@ -10,9 +10,12 @@
     bottom: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 100;
 }
 .data-container {
+    max-height: 100%;
     background-color: white;
     padding: 15px;
     min-width: 300px;
+    overflow-y:scroll;
 }
